# haversiner

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  haversiner.opam
lib/: coordinate_parser.ml  coordinate_parser.mli  haversine.ml  haversine.mli  haversiner_server.ml  haversiner_server.mli  jbuild  main.ml  server.ml
test/: haversine_test.ml  jbuild  payload.json  test.ml
