opam-version: "2.0"
name: "haversiner"
version: "0.1.0"
maintainer: "Bobby Priambodo <bobby.priambodo@gmail.com>"
authors: ["Bobby Priambodo <bobby.priambodo@gmail.com>"]
homepage: ""
bug-reports: ""
dev-repo: ""
license: ["MIT"]
tags: []
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "opium"
]
