opam-version: "2.0"
name: "haversiner"
version: "0.1.0"
maintainer: "Bobby Priambodo <bobby.priambodo@gmail.com>"
authors: ["Bobby Priambodo <bobby.priambodo@gmail.com>"]
homepage: "https://github.com/bobbypriambodo/haversiner"
bug-reports: "https://github.com/bobbypriambodo/haversiner/issues"
dev-repo: "https://github.com/bobbypriambodo/haversiner"
license: ["MIT"]
tags: []
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "opium"
]
